--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bookstore-server",
   "version": "1.0.0",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js"
   },
